--- a/3-Firmware/Four_Quad_DC_Motor_Driver_Firmware/Four_Quad_DC_Motor_Driver_Firmware.ioc
+++ b/3-Firmware/Four_Quad_DC_Motor_Driver_Firmware/Four_Quad_DC_Motor_Driver_Firmware.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
 ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,master
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-2\#ChannelRegularConversion=1
@@ -37,22 +37,23 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=PA1
-Mcu.Pin10=PA11
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin10=PA10
+Mcu.Pin11=PA11
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
-Mcu.Pin7=PA8
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=17
+Mcu.Pin7=PA7
+Mcu.Pin8=PA8
+Mcu.Pin9=PA9
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -76,9 +77,9 @@ PA0-WKUP.GPIO_Label=PWM5
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=I_SENSE
+PA1.GPIO_Label=PWM6
 PA1.Locked=true
-PA1.Signal=ADCx_IN1
+PA1.Signal=S_TIM2_CH2
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=PWM3
 PA10.Locked=true
@@ -95,23 +96,27 @@ PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=I_SET
 PA2.Locked=true
 PA2.Signal=ADCx_IN2
-PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA3.GPIO_Label=GEN_MODE
-PA3.GPIO_PuPd=GPIO_PULLDOWN
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=I_SENSE
 PA3.Locked=true
-PA3.Signal=GPIO_Input
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=SOFT_START
+PA3.Signal=ADCx_IN3
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=GEN_MODE
+PA4.GPIO_PuPd=GPIO_PULLDOWN
 PA4.Locked=true
 PA4.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=V_SENSE
+PA5.GPIO_Label=SOFT_START
 PA5.Locked=true
 PA5.Signal=GPIO_Input
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=GPIO_INPUT_D
+PA6.GPIO_Label=V_SENSE
 PA6.Locked=true
 PA6.Signal=GPIO_Input
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=GPIO_INPUT_D
+PA7.Locked=true
+PA7.Signal=GPIO_Input
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=PWM1
 PA8.Locked=true
@@ -139,7 +144,7 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=Four_Quad_DC_Motor_Driver_Firmware.ioc
 ProjectManager.ProjectName=Four_Quad_DC_Motor_Driver_Firmware
@@ -156,10 +161,10 @@ RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMC
 RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
-SH.ADCx_IN1.0=ADC1_IN1,IN1
-SH.ADCx_IN1.ConfNb=1
 SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.ConfNb=1
+SH.ADCx_IN3.0=ADC1_IN3,IN3
+SH.ADCx_IN3.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
@@ -170,6 +175,8 @@ SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
 SH.S_TIM1_CH4.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -180,8 +187,9 @@ TIM1.IPParameters=AutoReloadPreload,Period,Channel-PWM Generation1 CH1,Channel-P
 TIM1.Period=35999
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV2
-TIM2.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,Period,ClockDivision
+TIM2.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,Period,ClockDivision,Channel-PWM Generation2 CH2
 TIM2.Period=36000
 TIM4.IPParameters=Period
 TIM4.Period=3600
@@ -194,4 +202,3 @@ VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
-isbadioc=false
