--- a/3-Firmware/Four_Quad_DC_Motor_Driver_Firmware/Four_Quad_DC_Motor_Driver_Firmware.ioc
+++ b/3-Firmware/Four_Quad_DC_Motor_Driver_Firmware/Four_Quad_DC_Motor_Driver_Firmware.ioc
@@ -173,7 +173,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -213,7 +213,7 @@ TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
-TIM1.DeadTime=36
+TIM1.DeadTime=72
 TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Prescaler,Period,Pulse-PWM Generation1 CH1 CH1N,DeadTime,Channel-PWM Generation2 CH2 CH2N,Pulse-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,AutoReloadPreload
 TIM1.Period=3600
 TIM1.Prescaler=0
