--- a/3-Firmware/Four_Quad_DC_Motor_Driver_Firmware/Four_Quad_DC_Motor_Driver_Firmware.ioc
+++ b/3-Firmware/Four_Quad_DC_Motor_Driver_Firmware/Four_Quad_DC_Motor_Driver_Firmware.ioc
@@ -213,8 +213,9 @@ TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
-TIM1.DeadTime=72
-TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Prescaler,Period,Pulse-PWM Generation1 CH1 CH1N,DeadTime,Channel-PWM Generation2 CH2 CH2N,Pulse-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,AutoReloadPreload
+TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
+TIM1.DeadTime=100
+TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Prescaler,Period,Pulse-PWM Generation1 CH1 CH1N,DeadTime,Channel-PWM Generation2 CH2 CH2N,Pulse-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,AutoReloadPreload,CounterMode
 TIM1.Period=3600
 TIM1.Prescaler=0
 TIM1.Pulse-PWM\ Generation1\ CH1\ CH1N=0
